文档中国百分比的弄完

--- a/light-charts/css/style.css
+++ b/light-charts/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .chart-title div {
-    width: 260px;
+    width: 300px;
     margin-top: 15px;
     padding: 15px 0 15px 15px;
     padding-bottom: 15px;
@@ -136,16 +136,19 @@ body {
     }
     .data-part1 p {
         border-bottom: 1px solid #cccccc8a;
+        display: flex;
     }
     .table-year {
         display: inline-block;
         border-right: 1px solid #ffffff4a;
-        padding: 13px 2px;
+        padding: 13px 5px;
         background: rgba(255, 255, 255, 0.15);
+        font-size: 14px
     }
     .table-value {
         display: inline-block;
-        padding: 13px 1px;
+        padding: 13px 2px;
         background: rgba(255, 255, 255, 0.21);
+        font-size: 14px
     }
 }
